--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
+asttokens==3.0.0
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
@@ -16,22 +17,30 @@ chromadb==1.0.15
 click==8.2.1
 colorama==0.4.6
 coloredlogs==15.0.1
+comm==0.2.3
 dataclasses-json==0.6.7
+debugpy==1.8.16
+decorator==5.2.1
 deprecation==2.1.0
 distro==1.9.0
 dotenv==0.9.9
 durationpy==0.10
+executing==2.2.0
 fastapi==0.116.1
 filelock==3.18.0
+filetype==1.2.0
 flatbuffers==25.2.10
 frozenlist==1.7.0
 fsspec==2025.7.0
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
 google-auth==2.40.3
 google-genai==1.29.0
 googleapis-common-protos==1.70.0
 gotrue==2.12.3
 greenlet==3.2.3
 grpcio==1.74.0
+grpcio-status==1.74.0
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
@@ -45,17 +54,24 @@ hyperframe==6.1.0
 idna==3.10
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
+ipykernel==6.30.1
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 jiter==0.10.0
 joblib==1.5.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 kubernetes==33.1.0
 langchain==0.3.27
 langchain-chroma==0.2.5
 langchain-community==0.3.27
 langchain-core==0.3.72
+langchain-google-genai==2.1.9
 langchain-openai==0.3.28
 langchain-text-splitters==0.3.9
 langgraph==0.6.2
@@ -66,11 +82,13 @@ langgraph-sdk==0.2.0
 langsmith==0.4.8
 markdown-it-py==3.0.0
 marshmallow==3.26.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mmh3==5.2.0
 mpmath==1.3.0
 multidict==6.6.3
 mypy_extensions==1.1.0
+nest-asyncio==1.6.0
 numpy==2.3.2
 oauthlib==3.3.1
 onnxruntime==1.22.1
@@ -87,13 +105,19 @@ overrides==7.7.0
 packaging==25.0
 paho-mqtt==2.1.0
 pandas==2.3.1
+parso==0.8.4
+platformdirs==4.3.8
 postgrest==1.1.1
 posthog==5.4.0
+prompt_toolkit==3.0.51
 propcache==0.3.2
+proto-plus==1.26.1
 protobuf==6.31.1
+psutil==7.0.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
 psycopg-pool==3.2.6
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
@@ -108,7 +132,9 @@ pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+pywin32==311
 PyYAML==6.0.2
+pyzmq==27.0.1
 realtime==2.6.0
 referencing==0.36.2
 regex==2025.7.34
@@ -125,6 +151,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.42
+stack-data==0.6.3
 starlette==0.47.2
 storage3==0.12.0
 StrEnum==0.4.15
@@ -135,7 +162,9 @@ tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.4
+tornado==6.5.2
 tqdm==4.67.1
+traitlets==5.14.3
 typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
@@ -144,6 +173,7 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 watchfiles==1.1.0
+wcwidth==0.2.13
 websocket-client==1.8.0
 websockets==15.0.1
 xxhash==3.5.0
